--- a/public/assets/styles/styles.css
+++ b/public/assets/styles/styles.css
@@ -28,7 +28,6 @@ td {
 .header {
 	border: 1px solid red;
 	background-color: maroon;
-	margin-left: -30px;
 	overflow: hidden;
 }
 .center-content {
@@ -65,28 +64,29 @@ td {
 
 .nav-canvas {
 	position: absolute;
+	left: -200px;
+}
+
+.nav-canvas-clicked {
+	position: absolute;
 	left: 0px;
 	height: 100%;
 	background-color: rgba(0, 0, 0, .7);
 	z-index: 2;
 	padding-right: 2px;
-	box-shadow: inset 0 5px .25em black;
 	border: 1px black solid;
-}
-
-.nav-canvas-clicked {
-	position: relative;
-	left: 0px;
 }
 
 .main-content {
 	position: relative;
-	left: 200px;
+	left: 0px;
 	height: 100%;
 }
 
 .main-content-clicked {
 	left: 200px;
+	height: 100%;
+	position: relative;
 }
 
 .nav-link {
@@ -104,5 +104,5 @@ td {
 	width: 100%;
 	height: 2000px;
 /*	background: rgba(0,0,0,.4);
-*/	z-index: 1;
+*/	z-index: 0;
 }
