--- a/public/assets/styles/styles.css
+++ b/public/assets/styles/styles.css
@@ -27,6 +27,11 @@ table {
 }
 td {
   border: 1px solid black;
+  font-size: 12px;
+}
+
+tr {
+	background-color: #e9e9e9;
 }
 
 /*Header Content */
@@ -49,7 +54,6 @@ td {
 }
 
 .player-table {
-	margin-left: -3%;
 }
 .menu-btn {
   margin-left: 15px;
