--- a/public/assets/styles/styles.css
+++ b/public/assets/styles/styles.css
@@ -20,6 +20,10 @@ header:after {
   content: "";
   clear: both;
 }
+
+label {
+	color: white;
+}
 table {
   border: 1px solid black;
   border-collapse: collapse !important;
@@ -33,6 +37,10 @@ tr {
 	background-color: #e9e9e9;
 }
 
+li {
+	list-style: none;
+}
+
 /*App Content*/
 .app {
 	height: 100%;
@@ -43,10 +51,11 @@ tr {
 .header {
 	margin-bottom: 0;
   background: #000000; /* fallback for old browsers */
-  background: -webkit-linear-gradient(to left, #000000 , #434343); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to left, #000000 , #434343); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: -webkit-linear-gradient(to left, #000000 , #202020); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #000000 , #202020); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   overflow: hidden;
   color: white;
+  -webkit-box-shadow: 0 0 15px rgba(30,30,30,.75);
 }
 
 .center-content {
@@ -55,9 +64,13 @@ tr {
 }
 .search-container {
   margin-bottom: 30px;
+  -webkit-box-shadow: 0 0 15px rgba(30,30,30,.75);
 }
 
 .player-table {
+	-webkit-box-shadow: 0 0 15px rgba(30,30,30,.75);
+	height: 500px;
+	overflow: auto;
 }
 .menu-btn {
   margin-left: 15px;
@@ -75,15 +88,27 @@ tr {
 }
 
 /*PlayerView*/
+.player-background-image {
+	background-image: url(http://wallpapercave.com/wp/iYwVeZy.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.filter-form {
+	background-color: #202020;
+	-webkit-box-shadow: 0 0 15px rgba(30,30,30,.75);
+	padding: 5px;
+}
 
 .filter-form-select {
 	display: inline-block;
-	width: 10%;
+	width: 15%;
 	margin-right: 3px;
+	padding: 5px;
 }
 
 .filter-form-select-button {
-	margin-left: 5%;
+	margin-left: 3%;
 }
 /*Nav bar containers*/
 .app-container {
@@ -190,36 +215,39 @@ tr {
 /*Modal Content*/
 
 .modal {
-    position: absolute;
-    top: 50%;
+    position: fixed;
+    top: 25%;
     width: 50%;
-    background: #fff;
+    background: #e9e9e9;
     border: 1px solid #dedede;
     border-radius: 4px;
     height: 350px;
     left: 25%;
     z-index: 20;
+    visibility: show;
+    -webkit-box-shadow: 0 0 15px rgba(30,30,30,.75);
 }
 	/*Look for the translate property.. It will translate the component 50% of the page (horizontal, vertical)*/
-.modal {
-	visibility: hidden;
-}
 
 .modal-header {
 	    height: 15%;
-	    background-color: #292929;
+	    background-color: #202020;
 	    background-size: contain;
-	    border: 1px solid red;
+	    border: 1px solid black;
 	    color: white;
 }
 
 .modal-player-info {
     border: 1px solid black;
 }
+.modal-player-bio {
+	float: right;
+	margin-right: 65%;
+}
 
 .modal-schedule-info {
     width: 100%;
-    height: 200px;
+    height: 34%;
 }
 
 .modal-schedule-container {
