--- a/public/assets/styles/styles.css
+++ b/public/assets/styles/styles.css
@@ -239,6 +239,7 @@ li {
 
 .modal-player-info {
     border: 1px solid black;
+    height: 35%;
 }
 .modal-player-bio {
 	float: right;
@@ -247,7 +248,7 @@ li {
 
 .modal-schedule-info {
     width: 100%;
-    height: 34%;
+    height: 50%;
 }
 
 .modal-schedule-container {
@@ -258,12 +259,14 @@ li {
     height: 100%;
 }
 
-table.modal-table {
+.modal-table {
     font-size: 10px;
     font-color: red;
     font-size: 10px;
     width: 100%;
     display: inline-table;
+    height: 100%;
+    margin-bottom: -32px;
 }
 
 .modal-player-notes-container {
