--- a/public/assets/styles/styles.css
+++ b/public/assets/styles/styles.css
@@ -1,5 +1,5 @@
 * {
-	transition:all .5 ease-in;
+	transition:all .8 ease-in;
 }
 
 body {
@@ -27,6 +27,8 @@ label {
 table {
   border: 1px solid black;
   border-collapse: collapse !important;
+  -webkit-box-shadow: 0 0 15px rgba(30,30,30,.75);
+
 }
 td {
   border: 1px solid black;
@@ -165,6 +167,9 @@ li {
 .shadow {
 	position: fixed;
 }
+.shadow-modal {
+	position: fixed;
+}
 
 .shadow-click {
 	position: fixed;
@@ -172,6 +177,14 @@ li {
 	height: 2000px;
 	background: rgba(0,0,0,.4);
 	z-index: 1;
+}
+
+.shadow-modal-click {
+	position: fixed;
+	width: 100%;
+	height: 2000px;
+	background: rgba(0,0,0,.4);
+	z-index: 2;
 }
 
 /* Compare Container */
@@ -215,48 +228,78 @@ li {
 /*Modal Content*/
 
 .modal {
-    position: fixed;
-    top: 25%;
-    width: 50%;
-    background: #e9e9e9;
-    border: 1px solid #dedede;
-    border-radius: 4px;
-    height: 350px;
-    left: 25%;
-    z-index: 20;
-    visibility: show;
-    -webkit-box-shadow: 0 0 15px rgba(30,30,30,.75);
+  visibility: hidden;
+  position: fixed;
+  top: 25%;
+  width: 50%;
+  background: #e9e9e9;
+  border: 3px solid black;
+  border-radius: 4px;
+  height: 350px;
+  left: 25%;
+  z-index: 20;
+  -webkit-box-shadow: 0 0 15px rgba(30,30,30,.75);
 }
-	/*Look for the translate property.. It will translate the component 50% of the page (horizontal, vertical)*/
 
+.modal-click {
+	position: fixed;
+  top: 25%;
+  width: 50%;
+  background: #e9e9e9;
+  border: 3px solid black;
+  border-radius: 4px;
+  height: 400px;
+  left: 25%;
+  z-index: 20;
+  -webkit-box-shadow: 0 0 15px rgba(30,30,30,.75);
+  -webkit-transition: width .1s, height .1s, background-color .1s, -webkit-transform .1s;
+}
+
+	/*Look for the translate property.. It will translate the component 50% of the page (horizontal, vertical)*/
 .modal-header {
-	    height: 15%;
-	    background-color: #202020;
-	    background-size: contain;
-	    border: 1px solid black;
-	    color: white;
+	height: 15%;
+	background-color: #333;
+	background-size: contain;
+	border-top: 1px solid white;
+	color: white;
+	text-align: center;
+	padding-top: 11px;
+	font-weight: bold;
+	font-size: 20px;
+	-webkit-box-shadow: 0 0 15px rgba(30,30,30,.75);
 }
 
 .modal-player-info {
-    border: 1px solid black;
-    height: 35%;
+  border: 1px solid black;
+  height: 35%;
+  background-color: black;
+  color: white;
+  padding: 3px;
+}
+
+.modal-player-image {
+	height: 100%;
+	width: 20%;
 }
 .modal-player-bio {
 	float: right;
-	margin-right: 65%;
+	margin-right: 55%;
+	padding-top: 5%;
+	height: 100%;
+	font-weight: bold;
 }
 
 .modal-schedule-info {
-    width: 100%;
-    height: 50%;
+  width: 100%;
+  height: 50%;
 }
 
 .modal-schedule-container {
-    width: 70%;
-    display: inline-block;
-    float: left;
-    overflow: auto;
-    height: 100%;
+  width: 100%;
+  display: inline-block;
+  float: left;
+  overflow: auto;
+  height: 100%;
 }
 
 .modal-table {
