--- a/public/assets/styles/styles.css
+++ b/public/assets/styles/styles.css
@@ -358,6 +358,22 @@ li {
     margin-left:  30px;
 }
 
+.schedule-game {
+		height: 100px;
+		margin-left: 10%;
+		margin-right: 10%;
+}
+
+.schedule-image{
+	align-items: center;
+	height: 65px;
+	width: 60px;
+	margin-left: 10px;
+	text-align: center;
+  vertical-align: middle;
+  display: table-cell;
+}
+
 .schedule-week-list li {
 	display: inline;
 	margin-right: 2px;
@@ -369,27 +385,29 @@ li {
 }
 
 span.team1 {
-    width:  40%;
+  width:  40%;
+	height: 100%
 }
 
 span.team2 {
-    width:  40%;
+  width:  40%;
+	height: 100%;
 }
 
 .team1 {
     width: 40%;
     margin-left: 10%;
     display:  inline-block;
-    float:  left;
-    border: 1px solid yellow;
+    border: 1px solid black;
+		background-color: #e9e9e9;
 }
 
 .team2 {
     width: 40%;
     margin-right:  10%;
     display: inline-block;
-    float: right;
-    border: 1px solid yellow;
+		border: 1px solid black;
+		background-color: #e9e9e9;
 }
 
 .schedule {
