--- a/public/assets/styles/styles.css
+++ b/public/assets/styles/styles.css
@@ -78,7 +78,7 @@ li {
   width: 80%;
   margin: 0 auto;
 }
-.search-container {
+.ainer {
   margin-bottom: 30px;
   -webkit-box-shadow: 0 0 15px rgba(30,30,30,.75);
 }
@@ -227,6 +227,11 @@ li {
 .player1-image, .player2-image {
 	width: 100%;
 	height: 100%;
+}
+
+.player1-search, .player2-search {
+	display: inline;
+	width: 50%;
 }
 
 .switch-player {
