--- a/public/assets/scss/styles.scss
+++ b/public/assets/scss/styles.scss
@@ -1,4 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:400i,700,700i');
 @import "vendor/_reset";
-@import "modules/_variables";
+@import "modules/placeholders";
 @import "modules/_colors";
+@import "modules/_variables";
 @import "partials/_base";
