--- a/public/assets/scss/partials/_base.scss
+++ b/public/assets/scss/partials/_base.scss
@@ -4,20 +4,19 @@ body {
   }
 }
 
+h1, h2, h3, h4, h5, h6 {
+  font-family: $fonts1;
+}
 .center-content {
   max-width: 1240px;
   margin: 0 auto;
+  @extend %clearfix;
 }
 header {
-  // border-bottom: 1px solid #dedede;
   padding-top: 10px;
-  background: #000e33;
+  background: $header-bg-color;
   color: white;
-  &:after {
-    clear: both;
-    display: table;
-    content: "";
-  }
+  @extend %clearfix;
 }
 
 .logo-name {
@@ -50,10 +49,28 @@ header {
 .charts-toggle-container {
   width: 822px;
   float: left;
+  margin-bottom: 40px;
+  h1 {
+    font-size: 34px;
+    margin: 30px 0 20px;
+  }
 }
 .statistics-preview-container {
   float: left;
-  width: 417px;
+  width: 368px;
+  border: 1px solid $border-color;
+  padding: 20px 10px;
+  margin-bottom: 5px;
+  font-family: $fonts1;
+  font-size: 20px;
+  &:first-of-type {
+    margin-top: 84px;
+  }
+  h3 {
+    text-align: center;
+    margin-bottom: 15px;
+  }
+ @extend %foo;
 }
 .statistics-twitter-player {
   clear: both;
@@ -61,27 +78,36 @@ header {
 
 // Statistics Chart Style
 .toggle-tab {
+  font-family: $fonts1;
   display: inline-block;
   width: 205.5px;
   padding: 15px 0;
-  border: 1px solid black;
+  border: 1px solid $border-color;
   border-right: 0px solid transparent;
   border-bottom: 0px solid transparent;
   border-radius: 5px;
+  border-top-right-radius: 0px;
   border-bottom-left-radius: 0px;
   border-bottom-right-radius: 0px;
   text-align: center;
   &:last-of-type {
-    border-right: 1px solid black;
+    border-right: 1px solid $border-color;
+    border-top-right-radius: 5px;
   }
   a {
     text-decoration: none;
   }
 }
 
+.tab-active {
+  background: $light-gray;
+}
 
+.tab-inactive {
+  background: $mid-gray;
+}
 .charts-wrapper {
-  border: 1px solid black;
+  border: 1px solid $border-color;
 }
 .chart-container-QB {
   .chart-container {
@@ -102,6 +128,7 @@ header {
   background-position: center;
   position: relative;
   box-shadow: inset 5px 20px 95px 13px rgba(0,0,0,.5);
+  display: none;
   &:after {
     width: 100%;
     position: absolute;
@@ -120,11 +147,36 @@ header {
 .statistics-preview-player-image {
   text-align: center;
 }
-.compare-preview-img {
+.compare-sidebar {
+  float: right;
+  width: 375px;
+}
+.compare-preview-info {
+  width: 150px;
   display: inline-block;
+}
+.btn-compare {
+  width: 90%;
+  border-radius: 5px;
+  color: red;
+  height: 45px;
+  padding: 10px 20px;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 600;
+  background: $green;
+  color: #fff;
+  border: 0px solid transparent;
+  margin: 15px auto;
+  display: block;
+}
+.statistics-preview-link {
+  text-decoration: none;
+}
+.compare-preview-img {
   width: 150px;
   height: 150px;
-  border: 1px solid #dedede;
+  border: 1px solid $border-color;
   border-radius: 100px;
   overflow: hidden;
   img {
@@ -138,4 +190,48 @@ header {
   position: relative;
   bottom: 60px;
   margin: 0 10px;
+}
+
+// Twitter Title
+.statistics-twitter-tweets {
+  border-top: 1px solid $border-color;
+  width: 100%;
+  border-radius: 3px;
+}
+
+.statistics-twitter-container {
+  width: 820px;
+}
+.statistics-twitter-list {
+  height: 200px;
+  overflow-y: scroll;
+}
+.statistics-tweet {
+  border-bottom: 1px solid $border-color;
+  padding: 20px 10px 30px 20px;
+  background-image: linear-gradient(to bottom, #FFFFFF 0%, #C9C9CF 149%);
+  .time {
+    display: block;
+    margin-top: 10px;
+  }
+  span {
+    font-family: $font2;
+  }
+}
+.statistics-twitter-profile {
+  width: 20%;
+  // border: 1px solid $black;
+  padding: 20px;
+  text-align: center;
+  float: left;
+  img {
+    width: 77%;
+  }
+}
+
+.statistics-twitter-player {
+  margin-top: 10px;
+  margin-bottom: 20px;
+  font-size: 28px;
+  text-align: center;
 }
