--- a/public/assets/scss/partials/_base.scss
+++ b/public/assets/scss/partials/_base.scss
@@ -128,7 +128,6 @@ header {
   background-position: center;
   position: relative;
   box-shadow: inset 5px 20px 95px 13px rgba(0,0,0,.5);
-  display: none;
   &:after {
     width: 100%;
     position: absolute;
@@ -137,7 +136,6 @@ header {
     background: rgba(0,0,0,.1);
   }
 }
-
 
 
 
@@ -234,6 +232,13 @@ header {
   margin-top: 10px;
   margin-bottom: 20px;
   font-size: 28px;
+  text-align: center;
+}
+
+
+// Compare view
+.compare-headline {
+  font: 600 34px $fonts1;
   text-align: center;
 }
 
@@ -662,4 +667,250 @@ span {
   margin-bottom: 30px;
   position: relative;
   top: 1px;
+}
+
+// Player view
+
+/*PlayerView*/
+
+.player-table {
+  @extend %foo;
+  table {
+    width: 100%;
+  }
+  border-collapse: collapse;
+  border: 1px solid $border-color;
+  font-family: $font2;
+  td {
+    padding: 10px;
+    border: 1px solid $border-color;
+    &.table-category {
+      font-style: italic;
+    }
+    &.stat-heading {
+      font-weight: bold;
+    }
+  }
+  th td {
+    font-weight: 700;
+  }
+}
+.player-stats-container {
+  position: relative;
+  bottom: 40px;
+}
+.filter-form {
+	background: #000e33;
+	-webkit-box-shadow: 0 0 15px rgba(30,30,30,.75);
+	padding: 5px;
+  color: #fff;
+  font-family: $fonts1;
+  @extend %clearfix;
+}
+
+.filter-form-select {
+	display: inline-block;
+	width: 20%;
+	margin-right: 3px;
+	padding: 8px 15px;
+  float: left;
+  select {
+    -webkit-appearance: none !important;
+    -moz-appearance: none !important;
+    background-color: #FAFAFA;
+    border-radius: 0;
+    background-image: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9z…2ZSI+PHBvbHlnb24gcG9pbnRzPSI1Ljk5MiwwIDIuOTkyLDMgLTAuMDA4LDAgIi8+PC9zdmc+");
+    background-position: 100% center;
+    background-repeat: no-repeat;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #cccccc;
+    color: #444444;
+    font-family: inherit;
+    font-size: 0.77778rem;
+    line-height: normal;
+    padding: 0.44444rem;
+    border-radius: 0;
+    height: 2.05556rem;
+    width: 100%;
+  }
+}
+
+.filter-form-select-button {
+	margin-left: 3%;
+}
+
+.player-submit-btn {
+  input  {
+    font-size: 20px;
+    font-weight: 600;
+    border-radius: 3px;
+    width: 12%;
+    float: left;
+    height: 36px;
+    background: green;
+    border: none;
+    position: relative;
+    top: 19px;
+    background: $green;
+    color: #fff;
+  }
+}
+
+.shadow {
+  transition: all 0.25s ease;
+	position: fixed;
+}
+.shadow-modal {
+	position: fixed;
+}
+
+.shadow-click {
+  transition: all 0.25s ease;
+	position: fixed;
+	width: 100%;
+	height: 2000px;
+	background: rgba(0,0,0,.4);
+	z-index: 1;
+}
+
+.shadow-modal-click {
+	position: fixed;
+	width: 100%;
+	height: 2000px;
+	background: rgba(0,0,0,.4);
+	z-index: 2;
+}
+
+
+.modal {
+  visibility: hidden;
+  position: fixed;
+  top: 25%;
+  width: 50%;
+  background: #e9e9e9;
+  border: 3px solid black;
+  border-radius: 4px;
+  height: 350px;
+  left: 25%;
+  z-index: 20;
+  -webkit-box-shadow: 0 0 15px rgba(30,30,30,.75);
+}
+
+.modal-click {
+	position: fixed;
+  top: 5px;
+  width: 80%;
+  background: #fff;
+  border: 1px solid black;
+  border-radius: 4px;
+  left: 15%;
+  z-index: 20;
+  -webkit-box-shadow: 0 0 15px rgba(30,30,30,.75);
+  -webkit-transition: width .1s, height .1s, background-color .1s, -webkit-transform .1s;
+  .statistics-twitter-list {
+    overflow: hidden;
+  }
+}
+
+	/*Look for the translate property.. It will translate the component 50% of the page (horizontal, vertical)*/
+.modal-header {
+	height: 15%;
+	background-color: #333;
+	border-top: 1px solid white;
+	color: white;
+	text-align: center;
+	padding-top: 11px;
+	font-weight: bold;
+	font-size: 20px;
+	-webkit-box-shadow: 0 0 15px rgba(30,30,30,.75);
+}
+
+.modal-player-info {
+  border: 1px solid black;
+  height: 35%;
+  background-color: #fff;
+  color: white;
+  padding: 3px;
+  overflow: hidden;
+}
+
+.modal-player-image {
+	height: 100%;
+	width: 28%;
+	float: left;
+  position: realtive;
+  top: 30px;
+}
+.modal-tweets {
+	height: 215px;
+	overflow: scroll;
+  .message {
+    color: black;
+  }
+}
+.modal-player-bio {
+	float: right;
+	margin-right: 55%;
+	padding-top: 5%;
+	height: 100%;
+	font-weight: bold;
+  display: none;
+}
+
+.modal-schedule-info {
+  width: 100%;
+  height: 50%;
+  font-family: $fonts1;
+  font-size: 16px;
+  table {
+    background: #FFF;
+    border-collapse: collapse;
+    td {
+      border: 1px solid $border-color;
+      padding: 10px;
+    }
+  }
+
+}
+
+.modal-schedule-container {
+  width: 37%;
+  display: inline-block;
+  float: left;
+  overflow: auto;
+  height: 100%;
+}
+
+.modal-table {
+    width: 100%;
+    display: inline-table;
+    height: 100%;
+    margin-bottom: -32px;
+}
+
+.modal-player-notes-container {
+    overflow: auto;
+    width: 30%;
+    display: inline-block;
+    height: 100%;
+}
+
+.modal-player-notes {
+    width: 100%;
+    display: inline-block;
+    background-color: yellow;
+    size: 100%;
+    height: 100%;
+}
+
+.radar-chart-modal {
+  float: left;
+  width: 63%;
+  background: #fff;
+  padding-top: 30px;
+  div {
+    margin: 0 auto;
+    width: 480px;
+  }
 }
