--- a/public/assets/styles/styles.css
+++ b/public/assets/styles/styles.css
@@ -251,7 +251,7 @@ li {
 
 /*Modal Content*/
 
-.modal {
+.modal, .modal-click  {
   visibility: hidden;
   position: fixed;
   top: 25%;
@@ -263,27 +263,15 @@ li {
   left: 25%;
   z-index: 20;
   -webkit-box-shadow: 0 0 15px rgba(30,30,30,.75);
+	-webkit-transition: width .1s, height .1s, background-color .1s, -webkit-transform .1s;
+
 }
 
-.modal-click {
-	position: fixed;
-  top: 25%;
-  width: 50%;
-  background: #e9e9e9;
-  border: 3px solid black;
-  border-radius: 4px;
-  height: 400px;
-  left: 25%;
-  z-index: 20;
-  -webkit-box-shadow: 0 0 15px rgba(30,30,30,.75);
-  -webkit-transition: width .1s, height .1s, background-color .1s, -webkit-transform .1s;
-}
 
 	/*Look for the translate property.. It will translate the component 50% of the page (horizontal, vertical)*/
 .modal-header {
 	height: 15%;
 	background-color: #333;
-	background-size: contain;
 	border-top: 1px solid white;
 	color: white;
 	text-align: center;
@@ -299,11 +287,12 @@ li {
   background-color: black;
   color: white;
   padding: 3px;
+	font-family: $font2;
 }
 
 .modal-player-image {
 	height: 100%;
-	width: 28%;
+	width: 26%;
 	float: left;
 }
 .modal-tweets {
