--- a/public/assets/scss/partials/_base.scss
+++ b/public/assets/scss/partials/_base.scss
@@ -16,7 +16,6 @@ header {
   padding-top: 10px;
   background: $header-bg-color;
   color: white;
-  height: 55px;
   @extend %clearfix;
 }
 
@@ -342,68 +341,94 @@ span {
 
 /*Testing out indviduals team styles*/
 .team1-NO, .team2-NO {
+
 	display: table-cell;
 	border: 1px solid black;
+	background: #232526; /* fallback for old browsers */
+	background: -webkit-linear-gradient(to left, #232526 , #414345); /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to left, #232526 , #414345); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 	-webkit-box-shadow: 0 0 15px rgba(30,30,30,.75);
-  @include background-gradient(#232526, #414345);
 }
 
 .team1-MIA, .team2-MIA {
+
 	display: table-cell;
 	border: 1px solid black;
 	-webkit-box-shadow: 0 0 15px rgba(30,30,30,.75);
-  @include background-gradient(#02AAB0, #00CDAC);
+  background: #02AAB0; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #02AAB0 , #00CDAC); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #02AAB0 , #00CDAC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .team1-DET, .team2-DET {
+
 	display: table-cell;
 	border: 1px solid black;
 	-webkit-box-shadow: 0 0 15px rgba(30,30,30,.75);
-  @include background-gradient(#4CA1AF, #C4E0E5);
-
+  background: #4CA1AF; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #4CA1AF , #C4E0E5); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #4CA1AF , #C4E0E5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .team1-MIN, .team2-MIN {
+
 	display: table-cell;
 	border: 1px solid black;
 	-webkit-box-shadow: 0 0 15px rgba(30,30,30,.75);
-  @include background-gradient(#5614B0, #DBD65C);
+  background: #5614B0; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #5614B0 , #DBD65C); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #5614B0 , #DBD65C); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .team1-IND, .team2-IND {
+
 	display: table-cell;
 	border: 1px solid black;
 	-webkit-box-shadow: 0 0 15px rgba(30,30,30,.75);
-  @include background-gradient(#1e3c72, #2a5298);
+  background: #1e3c72; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #1e3c72 , #2a5298); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #1e3c72 , #2a5298); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .team1-TB, .team2-TB {
+
 	display: table-cell;
 	border: 1px solid black;
 	-webkit-box-shadow: 0 0 15px rgba(30,30,30,.75);
-  @include background-gradient(#eacda3, #d6ae7b);
+  background: #eacda3; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #eacda3 , #d6ae7b); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #eacda3 , #d6ae7b); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
+
 .team1-ATL, .team2-ATL {
+
 	display: table-cell;
 	border: 1px solid black;
 	-webkit-box-shadow: 0 0 15px rgba(30,30,30,.75);
-  @include background-gradient(#8E0E00, #1F1C18);
+  background: #8E0E00; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #8E0E00 , #1F1C18); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #8E0E00 , #1F1C18); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .team1-CHI, .team2-CHI {
+
 	display: table-cell;
 	border: 1px solid black;
 	-webkit-box-shadow: 0 0 15px rgba(30,30,30,.75);
-  @include background-gradient(#005C97, #363795);
-
+  background: #005C97; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #005C97 , #363795); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #005C97 , #363795); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .team1-DAL, .team2-DAL {
+
 	display: table-cell;
 	border: 1px solid black;
 	-webkit-box-shadow: 0 0 15px rgba(30,30,30,.75);
-  @include background-gradient(#304352, #d7d2cc);
+  background: #304352; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #304352 , #d7d2cc); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #304352 , #d7d2cc); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 .team1-GB, .team2-GB {
 
@@ -417,57 +442,80 @@ span {
 }
 
 .team1-NYG, .team2-NYG {
+
 	display: table-cell;
 	border: 1px solid black;
 	-webkit-box-shadow: 0 0 15px rgba(30,30,30,.75);
-  @include background-gradient(#8e9eab, #eef2f3);
+  background: #8e9eab; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #8e9eab , #eef2f3); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #8e9eab , #eef2f3); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 .team1-PHI, .team2-PHI {
+
 	display: table-cell;
 	border: 1px solid black;
 	-webkit-box-shadow: 0 0 15px rgba(30,30,30,.75);
-  @include background-gradient(#6A9113, #141517);
+  background: #6A9113; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #6A9113 , #141517); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #6A9113 , #141517); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .team1-LA, .team2-LA {
+
 	display: table-cell;
 	border: 1px solid black;
 	-webkit-box-shadow: 0 0 15px rgba(30,30,30,.75);
-  @include background-gradient(#004FF9, #FFF94C);
+  background: #004FF9; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #004FF9 , #FFF94C); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #004FF9 , #FFF94C); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 .team1-NYJ, .team2-NYJ {
+
 	display: table-cell;
 	border: 1px solid black;
 	-webkit-box-shadow: 0 0 15px rgba(30,30,30,.75);
-  @include background-gradient(#5A3F37, #2C7744);
+  background: #5A3F37; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #5A3F37 , #2C7744); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #5A3F37 , #2C7744); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .team1-BUF, .team2-BUF {
+
 	display: table-cell;
 	border: 1px solid black;
 	-webkit-box-shadow: 0 0 15px rgba(30,30,30,.75);
-  @include background-gradient(#0099F7, #F11712);
+  background: #0099F7; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #0099F7 , #F11712); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #0099F7 , #F11712); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .team1-HOU, .team2-HOU {
+
 	display: table-cell;
 	border: 1px solid black;
 	-webkit-box-shadow: 0 0 15px rgba(30,30,30,.75);
-  @include background-gradient(#4b6cb7, #182848);
+  background: #4b6cb7; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #4b6cb7 , #182848); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #4b6cb7 , #182848); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 .team1-KC, .team2-KC {
+
 	display: table-cell;
 	border: 1px solid black;
 	-webkit-box-shadow: 0 0 15px rgba(30,30,30,.75);
-  @include background-gradient(#a73737, #7a2828);
+  background: #a73737; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #a73737 , #7a2828); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #a73737 , #7a2828); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .team1-WAS, .team2-WAS {
+
 	display: table-cell;
 	border: 1px solid black;
 	-webkit-box-shadow: 0 0 15px rgba(30,30,30,.75);
-  @include background-gradient(#C02425, #F0CB35);
-
+  background: #C02425; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #C02425 , #F0CB35); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #C02425 , #F0CB35); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .team1-OAK, .team2-OAK,
@@ -477,85 +525,118 @@ span {
 	display: table-cell;
 	border: 1px solid black;
 	-webkit-box-shadow: 0 0 15px rgba(30,30,30,.75);
-  @include background-gradient(#000000, #434343);
+  background: #000000; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #000000 , #434343); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #000000 , #434343); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .team1-TEN, .team2-TEN {
+
 	display: table-cell;
 	border: 1px solid black;
 	-webkit-box-shadow: 0 0 15px rgba(30,30,30,.75);
-  @include background-gradient(#00d2ff, #928DAB);
-
+  background: #00d2ff; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #00d2ff , #928DAB); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #00d2ff , #928DAB); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .team1-DEN, .team2-DEN {
+
 	display: table-cell;
 	border: 1px solid black;
 	-webkit-box-shadow: 0 0 15px rgba(30,30,30,.75);
-  @include background-gradient(#0B486B, #F56217);
-
+  background: #0B486B; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #0B486B , #F56217); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #0B486B , #F56217); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .team1-SF, .team2-SF {
+
 	display: table-cell;
 	border: 1px solid black;
 	-webkit-box-shadow: 0 0 15px rgba(30,30,30,.75);
-  @include background-gradient(#F00000, #DC281E);
+  background: #F00000; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #F00000 , #DC281E); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #F00000 , #DC281E); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .team1-SEA, .team2-SEA {
+
 	display: table-cell;
 	border: 1px solid black;
 	-webkit-box-shadow: 0 0 15px rgba(30,30,30,.75);
-  @include background-gradient(#141E30, #243B55);
+  background: #141E30; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #141E30 , #243B55); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #141E30 , #243B55); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .team1-CAR, .team2-CAR {
+
 	display: table-cell;
 	border: 1px solid black;
 	-webkit-box-shadow: 0 0 15px rgba(30,30,30,.75);
-  @include background-gradient(#000428, #004e92);
+  background: #000428; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #000428 , #004e92); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #000428 , #004e92); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 .team1-CLE, .team2-CLE {
 	-webkit-box-shadow: 0 0 15px rgba(30,30,30,.75);
+
 	display: table-cell;
 	border: 1px solid black;
-  @include background-gradient(#FF8008, #FFC837);
+  background: #FF8008; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #FF8008 , #FFC837); /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to left, #FF8008 , #FFC837); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 .team1-SD, .team2-SD {
+
 	display: table-cell;
 	border: 1px solid black;
 	background-color: #e9e9e9;
+	background: #003973;
+  background: -webkit-linear-gradient(to left, #003973 , #E5E5BE);
+  background: linear-gradient(to left, #003973 , #E5E5BE);
 	-webkit-box-shadow: 0 0 15px rgba(30,30,30,.75);
-  @include background-gradient(#003973, #E5E5BE);
 }
 
 .team1-NE, .team2-NE {
+
 	display: table-cell;
 	border: 1px solid black;
 	background-color: #e9e9e9;
-  @include background-gradient(#4b6cb7, #182848);
+  background: #4b6cb7; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #4b6cb7 , #182848); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #4b6cb7 , #182848); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .team1-ARI, .team2-ARI {
+
 	display: table-cell;
 	border: 1px solid black;
-  @include background-gradient(#870000, #190A05);
+  background: #870000; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #870000 , #190A05); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #870000 , #190A05); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .team1-BAL, .team2-BAL {
+
 	display: table-cell;
 	border: 1px solid black;
-  @include background-gradient(#000000, #53346D);
-  -webkit-box-shadow: 0 0 15px rgba(30,30,30,.75);
+  background: #000000; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #000000 , #53346D); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #000000 , #53346D); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+	-webkit-box-shadow: 0 0 15px rgba(30,30,30,.75);
 }
 
 
 
 .team1-CIN, .team2-CIN {
+
 	display: table-cell;
 	border: 1px solid black;
-  @include background-gradient(#c21500, #ffc500);
+  background: #c21500; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #c21500 , #ffc500); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #c21500 , #ffc500); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .schedule {
@@ -625,51 +706,6 @@ span {
   color: #fff;
   font-family: $fonts1;
   @extend %clearfix;
-  &.DYI-Form {
-    width: 100%;
-    .filter-form-select {
-      width: 32%;
-      padding: 8px 9px;
-      label {
-        font-size: 13px;
-      }
-      .player-submit-btn {
-        input {
-          width: 14%;
-        }
-      }
-    }
-    .filter-form-select-button {
-      margin-left: 1%;
-      top: 22px;
-    }
-  }
-}
-
-.search-dyi {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  border-radius: 0;
-  background-color: #FFFFFF;
-  border-style: solid;
-  border-width: 1px;
-  border-color: #cccccc;
-  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
-  color: #444444;
-  display: block;
-  font-size: 0.77778rem;
-  height: 2.05556rem;
-  margin: 0 0 0.88889rem 0;
-  padding: 0.44444rem;
-  width: 100%;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  -webkit-transition: border-color 0.15s linear, background 0.15s linear;
-  -moz-transition: border-color 0.15s linear, background 0.15s linear;
-  -ms-transition: border-color 0.15s linear, background 0.15s linear;
-  -o-transition: border-color 0.15s linear, background 0.15s linear;
-  transition: border-color 0.15s linear, background 0.15s linear;
 }
 
 .filter-form-select {
@@ -877,139 +913,4 @@ span {
     margin: 0 auto;
     width: 480px;
   }
-}
-
-
-
-
-.menu-btn{
-    width: 42px;
-    margin: 10px 22px 0 0;
-    height: 30px;
-    position: relative;
-    left: 0;
-    bottom: 6px;
-    float: left;
-    @include prefix-prop(transform, rotate(0deg));
-    @include prefix-prop(transition, .25s ease-in-out);
-    cursor: pointer;
-
-    span {
-      display: block;
-      position: absolute;
-      height: 4px;
-      width: 100%;
-      background: #fff;
-      opacity: 1;
-      left: 0;
-      @include prefix-prop(transform, rotate(0deg));
-      @include prefix-prop(transition, .25s ease-in-out);
-
-      &:nth-child(1) {
-        top: 0px;
-      }
-
-      &:nth-child(2), &:nth-child(3) {
-        top: 12px;
-      }
-
-      &:nth-child(4) {
-        top: 24px;
-      }
-    }
-
-    &.open {
-      span {
-        &:nth-child(1) {
-          top: 18px;
-          width: 0%;
-          left: 50%;
-        }
-
-        &:nth-child(2) {
-          @include prefix-prop(transform, rotate(-45deg));
-        }
-
-        &:nth-child(3) {
-          @include prefix-prop(transform, rotate(45deg));
-        }
-
-        &:nth-child(4) {
-          top: 18px;
-          width: 0%;
-          left: 50%;
-        }
-      }
-    }
-  }
-
-  .login-img {
-    position: relative;
-    bottom: 10px;
-
-  }
-  .logout-btn {
-    font-size: 18px;
-    font-family: $font2;
-    color: #fff;
-    text-decoration: none;
-    position: relative;
-    top: -17px;
-    left: 20px;
-  }
-
-  .nav-canvas {
-    display: block;
-    position: absolute;
-    height: 100%;
-    background: #311f1f;
-    width: 170px;
-    left: -173px;
-  }
-
-.DIYPlayer {
-  float: left;
-  margin-left: 11px;
-  img {
-    position: relative;
-    width: 345px;
-    height: 230px;
-    top: 8px;
-  }
-}
-.dyi-filter-container {
-  @extend %clearfix;
-}
-.query-col-container {
-  width: 60%;
-}
-
-.search-container {
-  width: 94%;
-  margin-bottom: 20px;
-  margin-left: 11px;
-}
-
-.dyi-right-container {
-  float: right;
-  width: 70%;
-  padding-top: 12px;
-}
-
-.dyi-headline {
-  font-size: 68px;
-  text-align: center;
-  color: #fff;
-  font-family: $fonts1;
-}
-
-.DIYStatement {
-  margin-top: 20px;
-  font-size: 24px;
-  font-weight: 400;
-}
-
-.offset-up {
-  position: relative;
-  bottom: 110px;
 }
