--- a/public/assets/scss/modules/_variables.scss
+++ b/public/assets/scss/modules/_variables.scss
@@ -1,4 +1,5 @@
 $header-bg-color: $dark-blue;
+$footer-bg-color: $dark-blue;
 $border-color: $gray;
 $fonts1: 'Roboto', sans-serif;
 $font2: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
