--- a/public/assets/scss/partials/_base.scss
+++ b/public/assets/scss/partials/_base.scss
@@ -1,4 +1,5 @@
 body {
+  height: 100%;
   * {
     box-sizing: border-box;
   }
@@ -1194,6 +1195,7 @@ svg {
 }
 
 footer {
+  margin-top: 160px;
   background: $footer-bg-color;
   height: 70px;
   color: #fff;
@@ -1206,4 +1208,61 @@ footer {
     font-size: 20px;
     font-family: $fonts1;
   }
+}
+
+
+
+
+.nav-canvas {
+	position: absolute;
+	left: -170px;
+	-webkit-transition: width .1s, height .1s, background-color .1s, -webkit-transform .1s;
+	transition: width .1s, height .1s, background-color .1s, transform .1s;
+	transition-duration: .1s;
+	transition-timing-function: ease-out;
+	transition: 0.2s;
+}
+
+.nav-canvas-clicked {
+	position: absolute;
+	left: 0px;
+	height: 100%;
+	background-color: rgba(19, 19, 19, 0.9);
+	z-index: 2;
+	padding-right: 2px;
+	border: 1px black solid;
+	-webkit-transition: width .1s, height .1s, background-color .1s, -webkit-transform .1s;
+	transition: width .1s, height .1s, background-color .1s, transform .1s;
+	transition-duration: .5s;
+	transition-timing-function: ease-in;
+  transition: 0.2s;
+  padding-right: 20px;
+}
+.nav-link {
+  padding-top: 30px;
+  a {
+    color: #fff;
+    font-size: 16px;
+    font-family: $fonts1;
+    text-decoration: none;
+    margin-bottom: 15px;
+    display: block;
+    &:active, &:focus {
+      border: none;
+      outline: 0;
+    }
+  }
+}
+
+.app-container {
+  position: relative;
+  left: 0;
+}
+.shift {
+  left: 156px;
+  -webkit-transition: left .1s;
+  transition: left .1s;
+  transition-duration: .5s;
+  transition-timing-function: ease-in;
+  transition: 0.2s;
 }
