--- a/public/assets/scss/partials/_base.scss
+++ b/public/assets/scss/partials/_base.scss
@@ -150,6 +150,8 @@ header {
 .compare-sidebar {
   float: right;
   width: 375px;
+  position: relative;
+  top: -24px;
 }
 .compare-preview-info {
   width: 150px;
